Fixes for increasing text-spacing near breakpoints

--- a/src/app/header-toolbar/header-toolbar.component.scss
+++ b/src/app/header-toolbar/header-toolbar.component.scss
@@ -186,7 +186,7 @@
   }
 }
 
-@media screen and (max-width: 25rem) {
+@media screen and (max-width: 27rem) {
   .text-buttons {
     display: none;
   }
